Fix overflow on pre tags

--- a/theme/static/css/pygment.css
+++ b/theme/static/css/pygment.css
@@ -2,6 +2,7 @@ pre {
   padding: 5px;
   margin: 0;
   font-size: 12px;
+  overflow: scroll;
 }
 
 code {
